k8s/discovery-server-deploy-rpi.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: discovery-server-deploy
spec:
  replicas: 1
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: discovery-server
    spec:
      containers:
      - name: discovery-server
        image: logicalenigma/discovery-server:rpi
        ports:
        - containerPort: 8761
        imagePullPolicy: Always
