k8s/hostinfo-deploy-rpi.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: service-hostinfo-deploy
spec:
  replicas: 1
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: service-hostinfo
    spec:
      containers:
      - name: service-hostinfo
        image: logicalenigma/service-hostinfo:rpi
        imagePullPolicy: Always
        ports:
        - containerPort: 8101
