k8s/discovery-server-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: discovery-server-svc
  labels:
    app: discovery-server
spec:
  ports:
  - port: 8761
    nodePort: 30001
    protocol: TCP
  selector:
    app: discovery-server
  type: NodePort
