k8s/gateway-backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway-backend-svc
  labels:
    app: gateway-backend
spec:
  ports:
  - port: 8080
    nodePort: 30003
    protocol: TCP
  selector:
    app: gateway-backend
  type: NodePort
