k8s/hostinfo-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: hostinfo-svc
  labels:
    app: service-hostinfo
spec:
  ports:
  - port: 8101
    nodePort: 30002
    protocol: TCP
  selector:
    app: service-hostinfo
  type: NodePort
